# dirent

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  DirentConfig.cmake  Makefile  Makefile.linux  README.md
.github/workflows/: msvc.yml
examples/: cat.c  dir.c  dirls.c  du.c  extension_lookup.cpp  find.c  locate.c  ls.c  scandir.c  stat.c  updatedb.c
include/: dirent.h
tests/: t-compile.c  t-cplusplus.cpp  t-dirent.c  t-scandir.c  t-strverscmp.c  t-symlink.c  t-telldir.c  t-unicode.c  t-utf8.c
tests/1/dir/: readme.txt
vs2008/: .gitignore  vs2008.sln
vs2008/find/: find.vcproj
vs2008/locate/: locate.vcproj
vs2008/ls/: ls.vcproj
vs2008/t-compile/: t-compile.vcproj
vs2008/t-dirent/: t-dirent.vcproj
vs2008/updatedb/: updatedb.vcproj
